# smc_movement_models

./: .gitignore  .lintr  .pre-commit-config.yaml  README.md  original_code.R  pyproject.toml  requirements.txt  resume_papier.md
data/: 18_01_2008.csv  19_01_2008.csv  summary.csv
latex/content/: Contenu.tex
latex/parameters/: commandes_typo.tex  listings.tex
latex/report/: bibliography.bib  main.tex
latex/report/content/: PageDeGarde.tex
latex/report/parameters/: commandes_math.tex  packages.tex
latex/slides/: main.tex  parameters.tex
notebooks/: Fin_smc2.ipynb  first_implementation.ipynb  first_implementation_benjamin.ipynb  first_implementation_brouillon.ipynb  implementation_papier.ipynb  implementation_smc2.ipynb  r_implementation.ipynb  simulation_paper.ipynb
papers/: resume_papier.md
smc_movement_models/: data_generator.py  graph_values.py  main.py  models.py  models_SMC2.py  plots.py  process_data.py  smc_movement.py  variance_computing.py
